--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,11 @@
-
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-h2 {
-  display: block;
-}
-
 main > section {
-  display: flex;
+  flex: 1;
   text-align:center;
 }
 
@@ -26,6 +21,10 @@ input[type=text] {
   box-shadow: 0px 0px 2px #000 inset;
 }
 
+progress {
+  width: 50em;
+}
+
 input[type=submit] {
   background: darkblue;
   color: white;
@@ -34,5 +33,4 @@ input[type=submit] {
 
 img {
   box-shadow: 1px 1px 5px #000;
-
 }
